deploy/prod/txs-worker-notifications-webhooks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: safe-txs-worker-notifications-webhooks
  name: safe-txs-worker-notifications-webhooks
  namespace: crossbell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safe-txs-worker-notifications-webhooks
  template:
    metadata:
      labels:
        app: safe-txs-worker-notifications-webhooks
    spec:
      containers:
        - args:
            - docker/web/celery/worker/run.sh
          image: safeglobal/safe-transaction-service:latest
          name: txs-worker-notifications-webhooks
          resources: {}
      restartPolicy: Always
