deploy/prod/cfg-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: safe-cfg-web
  namespace: crossbell
spec:
  selector:
    app: safe-cfg-web
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: safe-cfg-web
  namespace: crossbell
spec:
  replicas: 1
  serviceName: "safe-cfg-web"
  selector:
    matchLabels:
      app: safe-cfg-web
  template:
    metadata:
      labels:
        app: safe-cfg-web
    spec:
      containers:
        - image: nginx:alpine
          name: cfg-web-nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-cfg-web
              readOnly: true
            - mountPath: /nginx-cfg
              name: nginx-shared-cfg
        - image: safeglobal/safe-config-service:latest
          name: cfg-web
          resources:
            requests:
              memory: "1000Mi"
              cpu: "200m"
            limits:
              memory: "4000Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /nginx
              name: nginx-shared-cfg
      restartPolicy: Always
      volumes:
        - name: nginx-cfg-web
          configMap:
            name: nginx-cfg-web
  volumeClaimTemplates:
    - metadata:
        name: nginx-shared-cfg
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "alicloud-disk-ssd"
        resources:
          requests:
            storage: 20Gi
