deploy/prod/cgw-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: safe-cgw-web
  namespace: crossbell
spec:
  selector:
    app: safe-cgw-web
  ports:
    - name: http
      protocol: TCP
      port: 3666
      targetPort: 3666
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: safe-cgw-web
  name: safe-cgw-web
  namespace: crossbell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safe-cgw-web
  template:
    metadata:
      labels:
        app: safe-cgw-web
    spec:
      containers:
        - image: safeglobal/safe-client-gateway:latest
          ports:
            - containerPort: 3666
          name: cgw-web
          resources:
            requests:
              memory: "1000Mi"
              cpu: "200m"
            limits:
              memory: "4000Mi"
              cpu: "1000m"
      restartPolicy: Always
