deploy/prod/txs-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: safe-txs-web
  namespace: crossbell
spec:
  selector:
    app: safe-txs-web
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: safe-txs-web
  name: safe-txs-web
  namespace: crossbell
spec:
  replicas: 1
  serviceName: "safe-txs-web"
  selector:
    matchLabels:
      app: safe-txs-web
  template:
    metadata:
      labels:
        app: safe-txs-web
    spec:
      containers:
        - image: nginx:alpine
          name: txs-web-nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-txs-web
              subPath: nginx.conf
              readOnly: true
            - mountPath: /nginx-txs
              name: nginx-shared-txs
        - args:
            - docker/web/run_web.sh
          image: safeglobal/safe-transaction-service:latest
          name: txs-web
          resources: {}
          volumeMounts:
            - mountPath: /nginx
              name: nginx-shared-txs
          workingDir: /app
      restartPolicy: Always
      volumes:
        - name: nginx-txs-web
          configMap:
            name: nginx-txs-web
  volumeClaimTemplates:
    - metadata:
        name: nginx-shared-txs
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "alicloud-disk-essd"
        resources:
          requests:
            storage: 20Gi
