deploy/prod/ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: safe-ui
  name: safe-ui
  namespace: crossbell
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: safe-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: safe-ui
  name: safe-ui
  namespace: crossbell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safe-ui
  template:
    metadata:
      labels:
        app: safe-ui
    spec:
      containers:
        - env:
            - name: NEXT_PUBLIC_BEAMER_ID
            - name: NEXT_PUBLIC_CYPRESS_MNEMONIC
            - name: NEXT_PUBLIC_FORTMATIC_KEY
            - name: NEXT_PUBLIC_GATEWAY_URL_PRODUCTION
              value: https://safe.crossbell.io/cgw
            - name: NEXT_PUBLIC_INFURA_TOKEN
            - name: NEXT_PUBLIC_IS_PRODUCTION
              value: "false"
            - name: NEXT_PUBLIC_PORTIS_KEY
            - name: NEXT_PUBLIC_SAFE_APPS_INFURA_TOKEN
            - name: NEXT_PUBLIC_SAFE_VERSION
              value: 1.3.0
            - name: NEXT_PUBLIC_SENTRY_DSN
            - name: NEXT_PUBLIC_TENDERLY_ORG_NAME
            - name: NEXT_PUBLIC_TENDERLY_PROJECT_NAME
            - name: NEXT_PUBLIC_TENDERLY_SIMULATE_ENDPOINT_URL
            - name: NEXT_PUBLIC_WC_BRIDGE
          image: safeglobal/web-core:dev
          name: ui
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
